# Compete-inator

./: Cargo.toml  README.md
src/: idents.rs  main.rs
