[package]
name = "compete-inator"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.22.0"
itertools = "0.11.0"
serde_json = "1.0.107"

[dependencies.eframe]
version = "0.22.0"
default-features = false
features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
]
serde_json = "1.0.105"
